# pytest-sql

./: .gitignore  README.md  pyproject.toml
sql/: format_pc_wpl.sql
src/sql_test_demo/: __init__.py  config.py  models.py  process.py
tests/: conftest.py  test_sql_function.py
