[project]
name = "sql-test-demo"
version = "0.1.0"
description = "Demo repository to test SQL queries while running pytest, with automatic cleanup."
readme = "README.md"
authors = [
    { name = "Bart Zwemmer", email = "bart@onegiantleap.dev" }
]
requires-python = ">=3.10.11"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.9",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
sql-test-demo = "sql_test_demo.process:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "sqlfluff>=3.4.2",
]
